--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,79 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  # Remote API
+  http: ^1.1.0
+  flutter_bloc: ^8.1.3
+  bloc_test: ^9.1.3
+  # DI helpers
+  injectable: ^2.1.2
+  get_it: ^7.6.0
+  # Functional programming thingies
+  dartz: ^0.10.1
+  # using svg
+  flutter_svg: ^2.0.7
+  # # local data base
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  # network image with cache
+  # cached_network_image: ^3.2.1
+  # persian numbers
+  persian_number_utility: ^1.1.3
+  shamsi_date: ^1.0.1
+  # cupertino_icons: ^1.0.2
+  equatable: ^2.0.5
+  # infinite_scroll_pagination: ^3.1.0
+  get: ^4.6.5
+  # flutter_html: ^3.0.0-alpha.2
+  # #  package_info: ^2.0.0
+  url_launcher: ^6.1.12
+  # persian_datetime_picker: ^2.4.0
+  # flutter_secure_storage: ^5.0.2
+  # # flutter graphql library
+  # graphql_flutter: ^5.0.1
+  # # graphql client library
+  fluttertoast: ^8.2.2
+  # pin_code_fields: ^7.1.0
+  # carousel_slider: ^4.0.0-nullsafety.0
+  # expandable: ^5.0.1
+  # dbcrypt: ^2.0.0
+  # universal_html: ^2.0.8
+  # webview_flutter: ^3.0.4
+  # #fingerprint
+  # local_auth: ^1.1.11
+  # # web socket helper library
+  # web_socket_channel: ^2.1.0
+  # # to get app info like device name, device id, version
+  # package_info_plus: ^1.4.2
+  # device_info_plus: ^4.0.0
+  # # flutter apps
+  # # firebase_core: ^1.10.0
+  # # firebase_analytics: ^8.3.4
+  # # firebase_crashlytics: ^2.3.0
+  # appmetrica_sdk: ^0.0.7+1
+  # sentry_flutter: ^6.4.0
+  # flutter_flavor: ^3.0.3
+  oktoast: ^3.3.1
+  # qr_flutter: ^4.0.0
+  # progress_state_button: ^1.0.4
+  # fl_chart: ^0.55.0
+  # modal_bottom_sheet: ^2.1.0
+  # timelines: ^0.1.0
+  # flutter_native_splash: ^2.1.5
+  # progressive_time_picker: ^0.0.6
+  # # check network connection
+  # connectivity_plus: ^2.2.1
+  # #suggest textfield
+  # flutter_typeahead: ^4.0.0
+  # flutter_spinkit: ^5.1.0
+  # sms_autofill: ^2.2.0
+  chat_bubbles: ^1.4.1
 
 dev_dependencies:
   flutter_test:
@@ -59,9 +127,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -74,17 +141,29 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Vazirmatn
+      fonts:
+        - asset: fonts/Vazirmatn-Regular.ttf
+        - asset: fonts/Vazirmatn-Black.ttf
+          weight: 900
+        - asset: fonts/Vazirmatn-ExtraBold.ttf
+          weight: 800
+        - asset: fonts/Vazirmatn-Bold.ttf
+          weight: 700
+        - asset: fonts/Vazirmatn-SemiBold.ttf
+          weight: 600
+        - asset: fonts/Vazirmatn-Medium.ttf
+          weight: 500
+        - asset: fonts/Vazirmatn-Regular.ttf
+          weight: 400
+        - asset: fonts/Vazirmatn-Light.ttf
+          weight: 300
+        - asset: fonts/Vazirmatn-ExtraLight.ttf
+          weight: 200
+        - asset: fonts/Vazirmatn-Thin.ttf
+          weight: 100
+
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
