--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   # network image with cache
-  # cached_network_image: ^3.2.1
+  cached_network_image: ^3.2.1
   # persian numbers
   persian_number_utility: ^1.1.3
   shamsi_date: ^1.0.1
